# nightmare-auth

./: .env  .gitignore  Cargo.toml  Dockerfile.dev  README.md  Secrets.toml  Shuttle.toml  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_extensions.rs  m20230902_024725_create_users.rs  m20230902_024928_create_permissions.rs  m20230902_025106_create_roles.rs  m20230902_025217_create_permission_user.rs  m20230902_025247_create_permission_role.rs  m20230902_025255_create_role_user.rs  m20230902_025309_create_tokens.rs
src/: api.rs  main.rs
src/controllers/: auth.rs  permission.rs  role.rs  user.rs
src/dao/: auth.rs  permission.rs  role.rs  user.rs
src/requests/: auth.rs  permission.rs  role.rs  user.rs
src/responses/: auth.rs  permission.rs  role.rs  user.rs
src/services/: auth.rs  mod.rs  permission.rs  role.rs  user.rs
