[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
nightmare-common = { git = "https://github.com/Geriano/nightmare-common" }

async-std = { version = "1", features = ["attributes", "tokio1"] }
fake = "2.8.0"
futures-util = "0.3.28"
uuid = { version = "1.5.0", features = ["v4"] }
chrono = "0.4.31"

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
