[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
nightmare-common = { path = "../../common", features = ["sqlite"] }

async-std = { version = "1", features = ["attributes", "tokio1"] }
fake = "2.8.0"
futures-util = "0.3.28"
uuid = { version = "1.5.0", features = ["v4"] }
chrono = "0.4.31"
chrono-tz = "0.8.4"

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "sqlx-sqlite",
]
